folio-dev/securitypolicy/ip_list.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  # kustomization.yaml merge key patches.path.target.name
  name: patch-placeholder
spec:
  authorization:
    defaultAction: Deny
    rules:
      - action: Allow
        principal:
          clientCIDRs:
          ## AWS EC2 for Sinopia Stage Airflow
          - "54.245.203.243/32"
          ## ILS Staff Users (Stanford VPN)
          - "10.130.0.0/18"
          - "10.130.128.0/18"
          - "10.130.64.0/18"
          - "10.130.192.0/18"
          - "171.64.0.0/14"
          - "171.66.1.0/24"
          - "10.32.0.0/15"
          - "10.34.0.0/15"
          - "10.96.0.0/11"
          - "10.98.0.0/15"
          - "10.109.28.0/22"
          - "10.111.6.0/23"
          - "172.24.0.0/14"
          - "172.20.206.128/25"
          - "172.20.207.0/25"
          - "171.66.188.121/29"
          - "171.66.128.0/23"
          - "204.63.224.0/21"
          - "172.20.224.0/21"
          - "10.109.48.0/25"
          - "10.109.48.128/25"
          - "171.66.16.0/21"
          - "171.66.24.0/21"
          - "171.66.176.0/20"
          - "171.66.132.0/23"
          - "171.66.134.0/23"
